fixed eboard cards and cropping

--- a/ausasite/css/styles.css
+++ b/ausasite/css/styles.css
@@ -75,20 +75,11 @@
     padding-bottom:14px;
 }
 
-.aspect-ratio-9x11 {
+.card-img {
     position: relative;
-    width: 100%;
-    padding-top: calc(11 / 9 * 100%);
-}
-  
-.aspect-ratio-9x11 .card-body {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    aspect-ratio:9/12;
+    object-fit:cover;
     overflow:hidden;
-    object-fit: cover;
 }
 
 /*sponsors*/
@@ -247,7 +238,7 @@
 
 .sociallog {
     position:absolute;
-    top:50%;
+    top:47.5%;
     left:50%;
     transform: translate(-50%, -50%);
     fill:white;
